--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,12 +5,10 @@
         <title>{% block title %}Bienvenido!{% endblock %}</title>
         {% block stylesheets %}
             <link href="{{ asset('css/bootstrap.min.css') }}" type="text/css" rel="stylesheet" />
-            <!-- Optional theme
-            <link href="{{ asset('css/bootstrap-theme.min.css') }}" type="text/css" rel="stylesheet" />
-            -->
-        {% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-        
+            
+            <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+           
+      {% endblock %}  
         
         
     </head>
@@ -20,10 +18,7 @@
 
         {% endblock %}
         {% block javascripts %}
-            <script src="{{ asset('js/jquery.min.js') }}"></script>
-                
-        {% endblock %}
-
-        
+            <script src="{{ asset('js/jquery/2.1.1/jquery.min.js') }}"></script>
+        {% endblock %}        
     </body>
 </html>
