--- a/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
@@ -1,7 +1,16 @@
 {% extends '::base.html.twig' %}
 
+{% block stylesheets %}
+	{{ parent() }}
+    <link href="{{ asset('css/bootstrap-switch.min.css') }}" type="text/css" rel="stylesheet" />
+    
+    <link href="{{ asset('css/fileinput.min.css') }}" media="all" rel="stylesheet" type="text/css" />
+    <link href="{{ asset('css/fileinput.css') }}" media="all" rel="stylesheet" type="text/css" />
+
+{% endblock %} 
+
 {% block body -%}
-    <h1>teg creation</h1>
+    <h1>Nuevo Trabajo Especial de Grado</h1>
     {{ form_start(form) }}
 
     	{{ form_errors(form) }}
@@ -28,15 +37,15 @@
         <div class="form-group">
             {{ form_label(form.cota) }}
             {{ form_errors(form.cota) }}
-            <div class="col-xs-3">
-                {{ form_widget(form.cota) }}
+            <div class="col-xs-9">
+  				<div class="input-group">
+                	<span id="cota_escuela" class="input-group-addon">D[Escuela]</span>
+                 	<input type="number" placeholder="Indice" id="biblioteca_tegbundle_teg_cota_index" required="required" class="form-control" min="1" max="99">
+                	<span id="cota_year" class="input-group-addon">[Año de Publicación]</span>
+            	</div>
             </div>
             <div class="col-xs-6">
-                <div id="prev_teg_cota" name="prev_teg_cota" class="form-control" readonly>
-                    D<span id="prev_cota_escuela">[escuela]</span>-
-                    <span id="prev_cota_indice">[indice]</span>-
-                    <span id="prev_cota_year">[Año de Publicacion]</span>
-                </div>
+                {{ form_widget(form.cota, { 'attr': {'style': 'display:none'} }) }}
             </div>
         </div>
 
@@ -48,7 +57,6 @@
             </div>
         </div>
 	    
-	   
 	    <div class="form-group">
             {{ form_label(form.autores) }}
             {{ form_errors(form.autores) }}
@@ -65,7 +73,6 @@
                 <a class="btn btn-success btn-sm" href="#" id="other-autor"><span class="glyphicon glyphicon-plus-sign"></span> Agregar Autor</a>
             </div>
 		</div>
-
 
         <div class="form-group">
             {{ form_label(form.resumen) }}
@@ -89,22 +96,31 @@
     			    {% endfor %}
                 </ul>
                 <a class="btn btn-success btn-sm" href="#" id="add-another-word"><span class="glyphicon glyphicon-plus-sign"></span> Agregar otra palabra clave</a>
+
             </div>
 		</div>
         <div class="form-group">
-            {# { form_label(form.capitulos) } #}
-            {# { form_errors(form.capitulos) } #        }
+            {{ form_label(form.capitulos) }}
+            {{ form_errors(form.capitulos) }}
             
             <div class="col-xs-9">
-                <ul id="cap-fields-list" class="list-unstyled" data-prototype="{# { form_widget(form.capitulos.vars.prototype) | e } #}">
-                    {# % for capField in form.capitulos %}
+                <ul id="cap-fields-list" class="list-unstyled" data-prototype="{ { form_widget(form.capitulos.vars.prototype) | e } }">
+                    {% for capField in form.capitulos %}
                         <li>
                             {{ form_errors(capField) }}
                             {{ form_widget(capField) }}
                         </li>
-                    {% endfor % #}
+                    {% endfor %}
                 </ul>
                 <a class="btn btn-success btn-sm" href="#" id="add-another-cap"><span class="glyphicon glyphicon-plus-sign"></span> Agregar otro archivo</a>
+            </div>
+        </div>
+
+        <div class="form-group">
+            
+            {{ form_errors(form.published) }}
+            <div class="col-xs-offset-3 col-xs-9">
+                {{ form_widget(form.published) }}{{ form_label(form.published) }}
             </div>
         </div>
         <div class="form-group">
@@ -126,27 +142,52 @@
 
 {% block javascripts %}
     {{ parent() }}
+    <script src="{{ asset('js/bootstrap-switch.min.js') }}" type="text/javascript"></script>
+    
+    <script src="{{ asset('js/fileinput.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('js/fileinput_locale_es.js') }}" type="text/javascript"></script>
     <script type="text/javascript">
     
+    $("[name='biblioteca_tegbundle_teg[published]']").bootstrapSwitch();
+	
+	$('#biblioteca_tegbundle_teg_capitulos_0_file').fileinput({
+        language: 'es',
+        uploadUrl: '#',
+        allowedFileExtensions : ['pdf'],
+        showUpload: false,
+
+    });
+    $('#biblioteca_tegbundle_teg_capitulos_1_file').fileinput({
+        language: 'es',
+        uploadUrl: '#',
+        allowedFileExtensions : ['pdf'],
+        showUpload: false,
+
+    });
+
     jQuery(document).ready(function() {
 
         // realiza un seguimiento de cuántos campos de autores y palabras clave se han pintado
-        var palabraCount = '{{ form.palabrasClave | length }}';
+        var wordsCount = '{{ form.palabrasClave | length }}';
         var autoresCount = '{{ form.autores | length }}';
     
         jQuery('#other-autor').click(
             function() {
-                if(autoresCount < 2)
+                if(autoresCount == 1)
                 {
+                    /* Get Object List Autor */
                     var autorList = jQuery('#autor-fields-list');
+                    /* Get prototype li */
                     var newWidget = autorList.attr('data-prototype');
+
                     newWidget = newWidget.replace("__name__", autoresCount);
                     newWidget = newWidget.replace("__name__", autoresCount);
                     autoresCount++;
 
-                    // crea un nuevo elemento lista y lo añade a la lista
+                    // Crea un nuevo elemento lista
                     var newLi = jQuery('<li id="2" class="input-group"></li>').html(newWidget);
-                    newLi.appendTo(jQuery('#autor-fields-list'));
+                    // El elemento lo añade a la lista
+                    newLi.appendTo(autorList);
                     //cambiar nombre de etiqueta
                     $("#other-autor").html("<span class='glyphicon glyphicon-remove-sign'></span> Quitar");
                     $("#other-autor").attr("class", "input-group-addon btn btn-danger btn-sm");
@@ -156,71 +197,111 @@
                 {
                     autoresCount--;
                     
-                    //cambiar nombre de etiqueta
+                    //Cambiar nombre de etiqueta
                     $("#other-autor").html("<span class='glyphicon glyphicon-plus-sign'></span> Agregar Autor");
                     $("#other-autor").attr("class", "btn btn-success btn-sm");
+                    // Se mueve al ul
                     $("#other-autor").appendTo("#form-autor");
+                    // Se remueve li 2
                     $('#autor-fields-list #2').remove();
                 }
                 return false;
             }
         );
 
-        jQuery('#add-another-word').click(
+        jQuery('#add-another-word').click( 
             function() {
-        
-                var palabraList = jQuery('#word-fields-list');
-                var newWidget = palabraList.attr('data-prototype');
-                newWidget = newWidget.replace("__name__", palabraCount);
-                newWidget = newWidget.replace("__name__", palabraCount);
-                palabraCount++;
+				/* Get Object List Word */
+                var wordList = jQuery('#word-fields-list');
+            	
+            	if(wordsCount == 3)
+            	{
+            		var remove_btn= jQuery('<a id="remove-word" name="remove-word"class="input-group-addon btn btn-danger btn-sm" href="#" ></a>');
+            		remove_btn.html('<span class="glyphicon glyphicon-remove-sign"></span> Quitar');
+            		remove_btn.click(
+			  	     	function(){
+			               	wordsCount--;
+			            	
+			                //Cambiar clase de li anterior
+			                $('[id*="word-'+wordsCount+'"]').attr("class", "input-group");
+			                // Se mueve al li anterior
+			                $("#remove-word").appendTo($('[id*="word-'+wordsCount+'"]'));
+			                // Se remueve li actual
+			                $('[id*="word-'+(wordsCount+1)+'"]').remove();
 
-                // crea un nuevo elemento lista y lo añade a la lista
-                var newLi = jQuery('<li id="word-'+palabraCount+'" class="input-group"></li>').html(newWidget);
+			                if(wordsCount == 3)
+			            	{
+			            		$('#remove-word').remove();
+			            	}
+			            	return false;
+			            }
+        			);
+            		remove_btn.appendTo(wordList);	
+            	}
+               
+                /* Get prototype li */
+                var newWidget = wordList.attr('data-prototype');
 
-                newLi.appendTo(jQuery('#word-fields-list'));
-                jQuery('<a id="quitar" name="word-'+palabraCount+'" class="input-group-addon btn btn-danger btn-sm">Quitar</a>').appendTo(jQuery('#word-'+palabraCount));
+                newWidget = newWidget.replace("__name__", wordsCount);
+                newWidget = newWidget.replace("__name__", wordsCount);
+                
+                // Cambia clase de li anterior
 
+                $('[id*="word-'+wordsCount+'"]').attr("class", null);
+
+                wordsCount++;
+
+                // Crea un nuevo elemento lista
+                var newLi = jQuery('<li id="word-'+wordsCount+'" class="input-group"></li>').html(newWidget);
+                // El elemento lo añade a la lista
+                newLi.appendTo(wordList);
+
+                //Mover boton de quitar a nuevo objeto li
+                $("#remove-word").appendTo(newLi);
+                
                 return false;
             }
         );
 
         // Generar Cota
-        $('#biblioteca_tegbundle_teg_publicacion_year').change(function(){
-            if($(this).val() == 0)
-            {
-                $("#prev_cota_year").text("[Año de Publicación]");
-            }
-            else
-            {
-                $("#prev_cota_year").text(("0" + ($(this).val() % 100) ).slice (-2));
-            }
-        });
-
-        $('#biblioteca_tegbundle_teg_escuela').change(function(){
-            if($(this).val() == 0)
-            {
-                $("#prev_cota_escuela").text("[Escuela]");
-            }
-            else
-            {
-                $("#prev_cota_escuela").text($(this).val().charAt(0));
-            }
-        });
-
-        $('#biblioteca_tegbundle_teg_cota').change(function(){
-            if($(this).val() <= 0)
-            {
-                $("#prev_cota_indice").text("[indice]");
-            }
-            else
-            {
-                $("#prev_cota_indice").text(("0" + $(this).val()).slice (-2));
-            }
-        });
-
+        $('#biblioteca_tegbundle_teg_publicacion_year,#biblioteca_tegbundle_teg_escuela,#biblioteca_tegbundle_teg_cota_index').change(function(){
         
+	//            alert($('#biblioteca_tegbundle_teg_publicacion_year').val());
+  	//          alert($('#biblioteca_tegbundle_teg_escuela').val());
+    //        alert($('#biblioteca_tegbundle_teg_cota_index').val());
+            if($('#biblioteca_tegbundle_teg_publicacion_year').val() == 0)
+            {
+                var prev_cota_year = "[Año de Publicación]";
+            }
+            else
+            {
+                var prev_cota_year = (("0" + ($('#biblioteca_tegbundle_teg_publicacion_year').val() % 100) ).slice (-2));
+            }
         
+            if($('#biblioteca_tegbundle_teg_escuela').val() == 0)
+            {
+                var prev_cota_escuela = "[Escuela]";
+            }
+            else
+            {
+                var prev_cota_escuela = $('#biblioteca_tegbundle_teg_escuela').val().charAt(0);
+            }
+
+            if($('#biblioteca_tegbundle_teg_cota_index').val() <= 0)
+            {
+                var prev_cota_index = "[indice]";
+            }
+            else
+            {
+                var prev_cota_index = (("0" + $('#biblioteca_tegbundle_teg_cota_index').val()).slice (-2));
+            }
+            
+            $('#cota_escuela').text("D"+prev_cota_escuela);
+            $('#cota_year').text(prev_cota_year);
+
+            $('#biblioteca_tegbundle_teg_cota').val("D"+prev_cota_escuela+"-"+prev_cota_index+"-"+prev_cota_year);
+        });
+
     });
    
     </script>
