--- a/src/Biblioteca/UserBundle/Resources/views/layout.html.twig
+++ b/src/Biblioteca/UserBundle/Resources/views/layout.html.twig
@@ -1,15 +1,80 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}   
+
+{% block menubackend %}
+{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+<nav class="navbar navbar-inverse">
+<div class="container-fluid">
+<!-- Brand and toggle get grouped for better mobile display -->
+<div class="navbar-header">
+<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+<span class="sr-only">Toggle navigation</span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+</button>
+<a class="navbar-brand" href="#">LOGO</a>
+</div>
+
+<!-- Collect the nav links, forms, and other content for toggling -->
+<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav">
+        {% if app.user.roles[0]=="ROLE_ADMIN" %}
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Usuarios <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Nuevo Usuario</a></li>
+                    <li><a href="#">Listar Usuarios</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="#">Historial</a></li>
+                </ul>
+            </li>
+        {% endif %}
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teg <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+                <li><a href="#">Nuevo Teg</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Listar TEGs</a></li>
+            </ul>
+        </li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }}
+            <ul class="dropdown-menu">
+                <li>
+                    <a href="{{ path('fos_user_profile_show') }}">
+                        Perfil
+                    </a>
+                </li>
+                <li>
+                    <a href="{{ path('fos_user_profile_edit') }}">
+                        Editar Perfil
+                    </a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li>
+                    <a href="{{ path('fos_user_security_logout') }}">
+                        {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+                    </a>
+                </li>
+            </ul>
+        </li>
+    </ul>
+</div><!-- /.navbar-collapse -->
+</div><!-- /.container-fluid -->
+</nav>
+    {% else %}
+        <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
+    {% endif %}
+{% endblock %}
+
+{% block body %}
+<h1>lYu sjif</h1>   
         <div>
-            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
-                <a href="{{ path('fos_user_security_logout') }}">
-                    {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
-                </a>
-            {% else %}
-                <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
-            {% endif %}
+            
         </div>
 
         {% if app.request.hasPreviousSession %}
@@ -22,7 +87,7 @@
             {% endfor %}
         {% endif %}
 
-        <div>
+        <div id="fos_user_content">
             {% block fos_user_content %}
             {% endblock fos_user_content %}
         </div>
