--- a/src/Biblioteca/UserBundle/Resources/views/menu_backend.html.twig
+++ b/src/Biblioteca/UserBundle/Resources/views/menu_backend.html.twig
@@ -1,8 +1,5 @@
-{% extends 'base.html.twig' %}
-
-
-{% block menubackend %}
-    {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+{% trans_default_domain 'BibliotecaUserBundle' %}
+{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -66,26 +63,3 @@
     {% else %}
         <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
     {% endif %}
-{% endblock %}
-
-{% block body %}
-<h1>lYu sjif</h1>   
-        <div>
-            
-        </div>
-
-        {% if app.request.hasPreviousSession %}
-            {% for type, messages in app.session.flashbag.all() %}
-                {% for message in messages %}
-                    <div class="flash-{{ type }}">
-                        {{ message }}
-                    </div>
-                {% endfor %}
-            {% endfor %}
-        {% endif %}
-
-        <div id="fos_user_content">
-            {% block fos_user_content %}
-            {% endblock fos_user_content %}
-        </div>
-{% endblock %}
