--- a/src/Biblioteca/UserBundle/Resources/views/menu_backend.html.twig
+++ b/src/Biblioteca/UserBundle/Resources/views/menu_backend.html.twig
@@ -1,5 +1,7 @@
-{% trans_default_domain 'BibliotecaUserBundle' %}
-{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+{% extends '::base.html.twig' %}
+{% block menubackend %}
+   <h1>hola</h1> 
+    {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -63,3 +65,5 @@
     {% else %}
         <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
     {% endif %}
+
+{% endblock %}
