--- a/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
@@ -9,7 +9,7 @@
 
 {% endblock %} 
 
-{% block body -%}
+{% block body %}
     <h1>Nuevo Trabajo Especial de Grado</h1>
     {{ form_start(form) }}
 
