--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}Bienvenido!{% endblock %}</title>
-        {% block stylesheets %}
-            <link href="{{ asset('css/bootstrap.min.css') }}" type="text/css" rel="stylesheet" />
-            
-            <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-           
-      {% endblock %}  
-        
-        
-    </head>
-    <body>
-        <div id="body" class="container">
-            {% block menubackend %}
-                {% include 'BibliotecaUserBundle::menu_backend.html.twig' %}
-            {% endblock menubackend%}
-            {% block body %}
-            {% endblock %}
-        </div>
-        {% block javascripts %}
-            <script src="{{ asset('js/jquery/2.1.1/jquery.min.js') }}"></script>
-            <script src="{{ asset('js/bootstrap.min.js') }}"></script>
-        {% endblock %}        
-    </body>
+	<head>
+		<meta charset="UTF-8" />
+		<title>{% block title %}Bienvenido!{% endblock %}</title>
+		{% block stylesheets %}
+			<link href="{{ asset('css/bootstrap.min.css') }}" type="text/css" rel="stylesheet" />
+			
+			<link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+		   
+	  {% endblock %}  
+		
+		
+	</head>
+	<body>
+		<div id="body" class="container">
+			{% block menubackend %}
+				{% include 'BibliotecaUserBundle::menu_backend.html.twig' %}
+			{% endblock menubackend%}
+			{% block body %}
+			{% endblock %}
+		</div>
+		{% block javascripts %}
+
+			<script src="{{ asset('js/jquery/2.1.1/jquery.min.js') }}"></script>
+			<script src="{{ asset('js/angular.min.js') }}"></script>
+			<script src="{{ asset('js/bootstrap.min.js') }}"></script>
+			<script type="text/javascript">
+		        angular.module('todoAp', []).config(function($interpolateProvider){
+		            $interpolateProvider.startSymbol('[[').endSymbol(']]');
+		        });
+		    </script>
+		{% endblock %}        
+	</body>
 </html>
