--- a/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
@@ -10,144 +10,154 @@
 {% endblock %} 
 
 {% block body %}
-    <h1>Nuevo Trabajo Especial de Grado</h1>
-    {{ form_start(form) }}
+    <div ng-app="todoAp">
+        <h1>Nuevo Trabajo Especial de Grado</h1>
+        {{ form_start(form) }}
 
-    	{{ form_errors(form) }}
- 
-	    <div class="form-group">
-	        {{ form_label(form.publicacion) }}
-	        {{ form_errors(form.publicacion) }}
-            {% for Field in form.publicacion %}
-                <div class="col-xs-3">
-                    {{ form_errors(Field) }}
-                    {{ form_widget(Field, { 'attr': {'class': 'form-control'} }) }}
+        	{{ form_errors(form) }}
+     
+    	    <div class="form-group">
+    	        {{ form_label(form.publicacion) }}
+    	        {{ form_errors(form.publicacion) }}
+                {% for Field in form.publicacion %}
+                    <div class="col-xs-3">
+                        {{ form_errors(Field) }}
+                        {{ form_widget(Field, { 'attr': {'class': 'form-control', 'ng-model':(Field.vars.id)} }) }}
+                    </div>
+                {% endfor %}
+                <h1>[[biblioteca_tegbundle_teg_publicacion_year]]</h1>
+                <h1>[[biblioteca_tegbundle_teg_escuela]]</h1>
+    	    </div>
+
+    	    <div class="form-group">
+                {{ form_label(form.escuela) }}
+                {{ form_errors(form.escuela) }}
+                <div class="col-xs-9">
+                    {{ form_widget(form.escuela, { 'attr': {'ng-model':(form.escuela.vars.id)} }) }}
                 </div>
-            {% endfor %}
-	    </div>
-
-	    <div class="form-group">
-            {{ form_label(form.escuela) }}
-            {{ form_errors(form.escuela) }}
-            <div class="col-xs-9">
-                {{ form_widget(form.escuela) }}
             </div>
-        </div>
-        
-        <div class="form-group">
-            {{ form_label(form.cota) }}
-            {{ form_errors(form.cota) }}
-            <div class="col-xs-9">
-  				<div class="input-group">
-                	<span id="cota_escuela" class="input-group-addon">D[Escuela]</span>
-                 	<input type="number" placeholder="Indice" id="biblioteca_tegbundle_teg_cota_index" required="required" class="form-control" min="1" max="99">
-                	<span id="cota_year" class="input-group-addon">[Año de Publicación]</span>
-            	</div>
-            </div>
-            <div class="col-xs-6">
-                {{ form_widget(form.cota, { 'attr': {'style': 'display:none'} }) }}
-            </div>
-        </div>
-
-	    <div class="form-group">
-            {{ form_label(form.titulo) }}
-            {{ form_errors(form.titulo) }}
-            <div class="col-xs-9">
-                {{ form_widget(form.titulo) }}
-            </div>
-        </div>
-	    
-	    <div class="form-group">
-            {{ form_label(form.autores) }}
-            {{ form_errors(form.autores) }}
-            <div id="form-autor" class="col-xs-9">
-
-    		    <ul id="autor-fields-list" class="list-unstyled" data-prototype="{{ form_widget(form.autores.vars.prototype) | e }}">
-    			    {% for autorField in form.autores %}
-    			        <li>
-    			            {{ form_errors(autorField) }}
-    			            {{ form_widget(autorField) }}
-    			        </li>
-    			    {% endfor %}
-    		    </ul>
-                <a class="btn btn-success btn-sm" href="#" id="other-autor"><span class="glyphicon glyphicon-plus-sign"></span> Agregar Autor</a>
-            </div>
-		</div>
-
-        <div class="form-group">
-            {{ form_label(form.resumen) }}
-            {{ form_errors(form.resumen) }}
-            <div class="col-xs-9">
-                {{ form_widget(form.resumen) }}
-            </div>
-        </div>
-	    
-	    <div class="form-group">
-            {{ form_label(form.palabrasClave) }}
-            {{ form_errors(form.palabrasClave) }}
             
-		    <div class="col-xs-9">
-                <ul id="word-fields-list" class="list-unstyled" data-prototype="{{ form_widget(form.palabrasClave.vars.prototype) | e }}">
-    			    {% for palabraField in form.palabrasClave %}
-    			        <li>
-    			            {{ form_errors(palabraField) }}
-    			            {{ form_widget(palabraField) }}
-    			        </li>
-    			    {% endfor %}
-                </ul>
-                <a class="btn btn-success btn-sm" href="#" id="add-another-word"><span class="glyphicon glyphicon-plus-sign"></span> Agregar otra palabra clave</a>
+            <div class="form-group" ng-controller="ControladorTareas as ctrl">
+                {{ form_label(form.cota) }}
+                {{ form_errors(form.cota) }}
+                <ul>
+                <li ng-repeat="tarea in ctrl.tareas">
+                  <input type="checkbox" ng-model="tarea.hecho">
+                  <span >[[tarea.texto]]</span>
+                </li></ul>
+                <div class="col-xs-9">
+      				<div class="input-group">
+                    	<span id="cota_escuela" class="input-group-addon">D[Escuela]</span>
+                     	<input type="number" placeholder="Indice" id="biblioteca_tegbundle_teg_cota_index" required="required" class="form-control" min="1" max="99">
+                    	<span id="cota_year" class="input-group-addon">[Año de Publicación]</span>
+                	</div>
+                </div>
+                <div class="col-xs-6">
+                    {{ form_widget(form.cota, { 'attr': {'style': 'display:none'} }) }}
+                </div>
+            </div>
 
+    	    <div class="form-group">
+                {{ form_label(form.titulo) }}
+                {{ form_errors(form.titulo) }}
+                <div class="col-xs-9">
+                    {{ form_widget(form.titulo) }}
+                </div>
             </div>
-		</div>
-        <div class="form-group">
-            {{ form_label(form.capitulos) }}
-            {{ form_errors(form.capitulos) }}
-            
-            <div class="col-xs-9">
-                <ul id="cap-fields-list" class="list-unstyled" data-prototype="{ { form_widget(form.capitulos.vars.prototype) | e } }">
-                    {% for capField in form.capitulos %}
-                        <li>
-                            {{ form_errors(capField) }}
-                            {{ form_widget(capField) }}
-                        </li>
-                    {% endfor %}
-                </ul>
-                <a class="btn btn-success btn-sm" href="#" id="add-another-cap"><span class="glyphicon glyphicon-plus-sign"></span> Agregar otro archivo</a>
-            </div>
-        </div>
+    	    
+    	    <div class="form-group">
+                {{ form_label(form.autores) }}
+                {{ form_errors(form.autores) }}
+                <div id="form-autor" class="col-xs-9">
 
-        <div class="form-group">
-            
-            {{ form_errors(form.published) }}
-            <div class="col-xs-offset-3 col-xs-9">
-                {{ form_widget(form.published) }}{{ form_label(form.published) }}
+        		    <ul id="autor-fields-list" class="list-unstyled" data-prototype="{{ form_widget(form.autores.vars.prototype) | e }}">
+        			    {% for autorField in form.autores %}
+        			        <li>
+        			            {{ form_errors(autorField) }}
+        			            {{ form_widget(autorField) }}
+        			        </li>
+        			    {% endfor %}
+        		    </ul>
+                    <a class="btn btn-success btn-sm" href="#" id="other-autor"><span class="glyphicon glyphicon-plus-sign"></span> Agregar Autor</a>
+                </div>
+    		</div>
+
+            <div class="form-group">
+                {{ form_label(form.resumen) }}
+                {{ form_errors(form.resumen) }}
+                <div class="col-xs-9">
+                    {{ form_widget(form.resumen) }}
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <div class="col-xs-offset-3 col-xs-9">
+    	    
+    	    <div class="form-group">
+                {{ form_label(form.palabrasClave) }}
+                {{ form_errors(form.palabrasClave) }}
                 
-            </div>
-        </div>
- 
-	{{ form_end(form) }}
+    		    <div class="col-xs-9">
+                    <ul id="word-fields-list" class="list-unstyled" data-prototype="{{ form_widget(form.palabrasClave.vars.prototype) | e }}">
+        			    {% for palabraField in form.palabrasClave %}
+        			        <li>
+        			            {{ form_errors(palabraField) }}
+        			            {{ form_widget(palabraField) }}
+        			        </li>
+        			    {% endfor %}
+                    </ul>
+                    <a class="btn btn-success btn-sm" href="#" id="add-another-word"><span class="glyphicon glyphicon-plus-sign"></span> Agregar otra palabra clave</a>
 
-    <ul class="record_actions">
-        <li>
-            <a href="{{ path('teg') }}">
-                Back to the list
-            </a>
-        </li>
-    </ul>
+                </div>
+    		</div>
+            <div class="form-group">
+                {{ form_label(form.capitulos) }}
+                {{ form_errors(form.capitulos) }}
+                
+                <div class="col-xs-9">
+                    <ul id="cap-fields-list" class="list-unstyled" data-prototype="{ { form_widget(form.capitulos.vars.prototype) | e } }">
+                        {% for capField in form.capitulos %}
+                            <li>
+                                {{ form_errors(capField) }}
+                                {{ form_widget(capField) }}
+                            </li>
+                        {% endfor %}
+                    </ul>
+                    <a class="btn btn-success btn-sm" href="#" id="add-another-cap"><span class="glyphicon glyphicon-plus-sign"></span> Agregar otro archivo</a>
+                </div>
+            </div>
+
+            <div class="form-group">
+                
+                {{ form_errors(form.published) }}
+                <div class="col-xs-offset-3 col-xs-9">
+                    {{ form_widget(form.published) }}{{ form_label(form.published) }}
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-xs-offset-3 col-xs-9">
+                    
+                </div>
+            </div>
+     
+    	{{ form_end(form) }}
+
+        <ul class="record_actions">
+            <li>
+                <a href="{{ path('teg') }}">
+                    Back to the list
+                </a>
+            </li>
+        </ul>
+    </div>
 {% endblock %}
 
 {% block javascripts %}
     {{ parent() }}
+    
     <script src="{{ asset('js/bootstrap-switch.min.js') }}" type="text/javascript"></script>
    
     <script src="{{ asset('js/fileinput.js') }}" type="text/javascript"></script>
     <script src="{{ asset('js/fileinput_locale_es.js') }}" type="text/javascript"></script>
 
-    <script src="{{ asset('js/teg.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('js/controladorTeg.js') }}" type="text/javascript"></script>
     
     
 {% endblock %}
