Cota con Angularjs
Generador de cota, creación de controlador

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -26,7 +26,7 @@
 			<script src="{{ asset('js/angular.min.js') }}"></script>
 			<script src="{{ asset('js/bootstrap.min.js') }}"></script>
 			<script type="text/javascript">
-		        angular.module('todoAp', []).config(function($interpolateProvider){
+		        angular.module('tegApp', []).config(function($interpolateProvider){
 		            $interpolateProvider.startSymbol('[[').endSymbol(']]');
 		        });
 		    </script>
