--- a/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
@@ -82,20 +82,31 @@
                 </div>
             </div>
     	    
-    	    <div class="form-group">
+    	    <div class="form-group" >
                 {{ form_label(form.palabrasClave) }}
                 {{ form_errors(form.palabrasClave) }}
-                
+                {# { form.palabrasClave | join('|') } #}
+
     		    <div class="col-xs-9">
+                   
                     <ul id="word-fields-list" class="list-unstyled" data-prototype="{{ form_widget(form.palabrasClave.vars.prototype) | e }}">
         			    {% for palabraField in form.palabrasClave %}
         			        <li>
         			            {{ form_errors(palabraField) }}
         			            {{ form_widget(palabraField) }}
+                                <div ng-init="add('{{ palabraField.vars.value }}');" >
+                                </div>
         			        </li>
         			    {% endfor %}
-                    </ul>
-                    <a class="btn btn-success btn-sm" href="#" id="add-another-word"><span class="glyphicon glyphicon-plus-sign"></span> Agregar otra palabra clave</a>
+                    </ul>                    
+
+                    <div ng-repeat="item in wordkeys track by $index" class="alert alert-warning alert-dismissible" style="display: block;float: left;margin-right: 5px;" role="alert">
+  <button type="button" class="close" ng-click="remove($index)"><span aria-hidden="true">&times;</span></button>
+  <input type="text" value="[[item]]:[[$index]]"/>
+</div>
+    <div >
+ <input ng-model="newWordkey" type="text" ng-enter="add(newWordkey)" value=""></input><a ng-click="add(newWordkey)" class="btn btn-success btn-sm" href="#" id="add-another-word"><span class="glyphicon glyphicon-plus-sign"></span> Agregar palabra clave</a>
+    </div>
 
                 </div>
     		</div>
