--- a/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
@@ -20,7 +20,7 @@
                 {{ form_label(form.publicacion) }}
                 {{ form_errors(form.publicacion) }}
                 {% for Field in form.publicacion %}
-                    <div class="col-xs-3" ng-init="{{Field.vars.id}}='{{Field.vars.value}}';">
+                    <div class="col-xs-3" ng-init="{{Field.vars.id}}=parseInt('{{Field.vars.value}}');">
                         {{ form_errors(Field) }}
                         {{ form_widget(Field, { 'attr': {'class': 'form-control', 'ng-model':(Field.vars.id)} }) }}
                     </div>
@@ -92,7 +92,7 @@
                 {% endfor %}">
                 <div ng-repeat="item in wordkeys track by $index" class="alert alert-warning alert-dismissible" style="display: block;float: left;margin-right: 5px;">
   <button type="button" class="close" ng-click="remove($index)"><span aria-hidden="true">&times;</span></button>
-  <input type="text" value="[[item]]:[[$index]]"/>
+  <input type="text" name="[['biblioteca_tegbundle_teg[palabrasClave]['+$index+']']]" value="[[item]]:[[$index]]"/>
 </div>
     <div >
  <input ng-model="newWordkey" type="text" ng-enter="add(newWordkey)" value=""></input><a ng-click="add(newWordkey)" class="btn btn-success btn-sm" href="#" id="add-another-word"><span class="glyphicon glyphicon-plus-sign"></span> Agregar palabra clave</a>
@@ -121,16 +121,18 @@
                 
                 {{ form_errors(form.published) }}
                 <div class="col-xs-offset-3 col-xs-9">
-                    {{ form_widget(form.published) }}{{ form_label(form.published) }}
+                    {{ form_widget(form.published) }}
+                    {{ form_label(form.published) }}
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-xs-offset-3 col-xs-9">
-                    
+                    {{ form_widget(form.submit) }}
+                    {{ form_widget(form.reset) }}
                 </div>
             </div>
      
-        {{ form_end(form) }}
+        {{ form_end(form, {'render_rest': false} ) }}
 
         <ul class="record_actions">
             <li>
